--- a/app.json
+++ b/app.json
@@ -16,21 +16,65 @@
       "HEROKU_API_KEY": {
         "description": "Heroku account api key, https://dashboard.heroku.com/account",
         "required": true
-      }
-    },
-  "buildpacks": [
-              {
-                
-                "url": "heroku-community/apt"
-              },
-              {
-                "url": "heroku/nodejs"
-              },
-              {
-                "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-              },
-              {
-                "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
-              }
-            ]
-          }   
+      },
+		"SESSION_ID": {
+			"description": "Add your session id heren which you got after scanning the QR",
+			"required": true,
+			"value": ""
+		},
+		"OWNER_NAME": {
+			"description": "Add the owner name here and if you want to use the default name then just leave it)",
+			"required": false,
+			"value": "AJMAL x ABHI"
+		},
+		"OWNER_NUMBER": {
+			"description": "Add the owner number here",
+			"required": true,
+			"value": ""
+		},
+		"Caption": {
+			"description": "Add the owner location here and if you want to use the default name then just leave it",
+			"required": false,
+			"value": "India SouthIndia Kerala"
+		},
+		"BOT_NAME": {
+			"description": "Change the bot name here",
+			"required": true,
+			"value": "Wizard MD"
+		},
+		"WATERMARK": {
+			"description": "Add your watermark here",
+			"required": true,
+			"value": "Wizard MD by AJMAL x ABHI"
+		},
+		"STICKER_PACK_NAME": {
+			"description": "Add sticker pack name here",
+			"required": true,
+			"value": "Wizard-MD"
+		},
+		"STICKER_AUTHOR_NAME": {
+			"description": "Add sticker pack author name here",
+			"required": true,
+			"value": "AJMAL x ABHI"
+		},
+		"REACT_EMOJI": {
+			"description": "Add any emoji here.",
+			"required": true,
+			"value": ""
+		},
+                "LOGO": {
+			"description": "Add any emoji here.",
+			"required": true,
+			"value": "https://telegra.ph/file/e0bc28185977299bf5d2c.jpg"
+		},
+               "VIDEOURL": {
+			"description": "Add a video url for gif menu and video menu",
+			"required": true			
+		}
+	},
+	"buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    }
+    ]
+}
