--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "supervisor -s index.js",
+    "start": "node index.js",
     "cli": "node  --optimize_for_size --max_old_space_size=460 index.js"
   },
   "keywords": [
