--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,13 @@
 FROM node:lts-buster
 
-RUN git clone https://github.com/A-J-M-A-L/BETA /root/Ejumel
+RUN git clone https://github.com/A-J-M-A-L/BETA  /root/Ejumel
+
+RUN apt-get update && \
+apt-get install -y \
+ffmpeg \
+webp && \
+apt-get upgrade -y && \
+rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root/Ejumel
 
@@ -8,5 +15,6 @@ ENV TZ=Africa/Harare
 
 RUN npm install
 
+RUN npm install supervisor -g
 RUN yarn install --ignore-engines
 CMD ["node", "index.js"]
