--- a/app.json
+++ b/app.json
@@ -22,6 +22,11 @@
 			"required": false,
 			"value": ""
 		},
+               "ALIVE_MESSAGE": {
+			"description": "Add a message here which you want to see when typing .alive",
+			"required": true,
+			"value": ""
+		},
 		"OWNER_NAME": {
 			"description": "Add the owner name here and if you want to use the default name then just leave it)",
 			"required": false,
