--- a/heroku.yml
+++ b/heroku.yml
@@ -3,4 +3,4 @@ build:
   docker:
       worker: /lib/Dockerfile
 run:
-   worker: npm i pastebin-ts && npm start --db
+   worker: npm i pastebin-ts && npm start --mongodb+srv://AjmalSer:Ajmal-Achu@cluster0.4nojt.mongodb.net/?retryWrites=true&w=majority
