--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,5 @@
-require ('./bot')
 build:
   docker:
       worker: /lib/Dockerfile
 run:
-   worker: npm i pastebin-ts && npm start --mongodb+srv://AjmalSer:Ajmal-Achu@cluster0.4nojt.mongodb.net/?retryWrites=true&w=majority
+   worker: npm i pastebin-ts && npm start --db 'mongodb+srv://AjmalSer:Ajmal-Achu@cluster0.4nojt.mongodb.net/?retryWrites=true&w=majority'
